added missing images placeholder

--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 <body>
 
     <div id="currwin-page" class="tab-content">
-        <input id="currwin-search" class="search" placeholder="Search for Tabs" autofocus>
-
+        <div class="options">
+            <input id="currwin-search" class="search" placeholder="Search for Tabs" autofocus>
+            <img title="Open a new Browser" class="site-icon" style="margin: 5px; padding: 5px; cursor: pointer;"
+                src="./assets/images/new-window.svg" id="openNewWindow">
+        </div>
         <div id="currwin-list-wrapper"></div>
     </div>
 
