--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
 
     <div id="currwin-page" class="tab-content">
         <div class="options">
-            <input id="currwin-search" class="search" placeholder="Search for Tabs" autofocus>
-            <img title="Open a new Browser" class="site-icon" style="margin: 5px; padding: 5px; cursor: pointer;"
-                src="./assets/images/new-window.svg" id="openNewWindow">
+            <input id="currwin-search" class="search" placeholder="Search for Tabs">
+            <img title="Open a new Browser" class="site-icon" style="margin: 5px; padding: 5px; cursor: pointer;" src="./assets/images/new-window.svg" id="openNewWindow">
         </div>
         <div id="currwin-list-wrapper"></div>
     </div>
